--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2254,6 +2254,10 @@ section .we-help {
 	.floater-detail {
 		display: none;
 	}
+
+	.conquistas {
+		padding: 50px 0 120px 0px;
+	}
 }
 
 @media (max-width: 460px) {
